--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   Module::Build: '0'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4218, CPAN::Meta::Converter version 2.150001'
+generated_by: 'Module::Build version 0.4218, CPAN::Meta::Converter version 2.150005'
 license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -24,3 +24,4 @@ requires:
 resources:
   license: http://opensource.org/licenses/artistic-license-2.0.php
 version: '0.05'
+x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
