--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   Module::Build: '0'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4218, CPAN::Meta::Converter version 2.150005'
+generated_by: 'Module::Build version 0.422, CPAN::Meta::Converter version 2.150005'
 license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,7 +17,12 @@ provides:
   OS::CheckUpdates::AUR:
     file: lib/OS/CheckUpdates/AUR.pm
     version: '0.05'
+  OS::CheckUpdates::AUR::Capture:
+    file: lib/OS/CheckUpdates/AUR.pm
+  OS::CheckUpdates::AUR::stats:
+    file: lib/OS/CheckUpdates/AUR.pm
 requires:
+  Capture::Tiny: '0'
   JSON: '0'
   Try::Tiny: '0'
   WWW::AUR: '0.19'
